# reusable_synth

./: .gitignore  README.md
reusable_synth/: .clang-format  CMakeLists.txt  compile_commands.json
reusable_synth/Hardware/: CMakeLists.txt
reusable_synth/Software/: CMakeLists.txt  task.cpp  task.hpp
reusable_synth/Software/Inc/: task.hpp
reusable_synth/Software/Src/: task.cpp
reusable_synth/Utils/: CMakeLists.txt  logger.hpp  noncopyable.hpp  ring_buffer.hpp
reusable_synth/hardware/: led.hpp
reusable_synth/software/: CMakeLists.txt  task.cpp  task.hpp
reusable_synth/utils/: CMakeLists.txt  logger.hpp  ring_buffer.hpp
tests/: .clang-format  CMakeLists.txt  compile_commands.json
tests/mocks/: CMakeLists.txt  MockLed.hpp
tests/tests/: CMakeLists.txt  led_test.cpp  ring_buffer_test.cpp  task_test.cpp
tests/tests/utils/: CMakeLists.txt  logger_test.cpp  ring_buffer_test.cpp
